--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     --text: #f1f5f9;
     --glass: rgba(255, 255, 255, 0.03);
 }
-
 body { 
     font-family: 'PingFang TC', 'Microsoft JhengHei', sans-serif; 
     background-color: var(--bg);
@@ -24,130 +23,156 @@ body {
     margin: 0; padding: 20px 15px; color: var(--text);
     min-height: 100vh; line-height: 1.6;
 }
-
 .container { max-width: 1000px; margin: 0 auto; }
-
 header { text-align: center; margin-bottom: 30px; padding: 10px 0; }
-header h1 { 
-    font-size: 2.2rem; margin: 0; color: var(--accent); font-weight: 900; 
-    text-shadow: 0 0 20px rgba(56, 189, 248, 0.3);
-    letter-spacing: 2px;
-}
+header h1 { font-size: 2.2rem; margin: 0; color: var(--accent); font-weight: 900; text-shadow: 0 0 20px rgba(56,189,248,0.3); letter-spacing: 2px; }
 header p { font-size: 0.85rem; margin: 8px 0 0; opacity: 0.5; letter-spacing: 3px; font-weight: 300; }
-
-.card { 
-    background: var(--card-bg); 
-    backdrop-filter: blur(12px);
-    border: 1px solid rgba(255,255,255,0.08);
-    padding: 24px; border-radius: 24px; 
-    box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-    margin-bottom: 25px;
-}
-
-.upload-section { border: 2px dashed rgba(56, 189, 248, 0.2); transition: 0.3s; padding: 40px 20px; }
-.upload-section:hover { border-color: var(--accent); background: rgba(56, 189, 248, 0.05); }
-
-button { 
-    background: linear-gradient(135deg, var(--accent), #0284c7);
-    color: white; border: none; padding: 16px 30px; 
-    border-radius: 14px; font-weight: 800; font-size: 1.1rem;
-    cursor: pointer; transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0 4px 15px rgba(56, 189, 248, 0.3);
-    width: 100%; letter-spacing: 1px;
-}
-button:hover { transform: translateY(-3px); box-shadow: 0 8px 25px rgba(56, 189, 248, 0.5); }
-
-.dashboard-grid { display: grid; grid-template-columns: 1fr; gap: 20px; }
-@media (min-width: 768px) { .dashboard-grid { grid-template-columns: 1fr 1fr; } }
-
-h3 { font-size: 1.2rem; margin-top: 0; margin-bottom: 20px; color: var(--gold); display: flex; align-items: center; font-weight: 700; }
-h3::before { content: ''; display: inline-block; width: 4px; height: 20px; background: var(--gold); margin-right: 12px; border-radius: 2px; }
-
-table { width: 100%; border-collapse: collapse; }
-th { text-align: center; font-size: 0.75rem; opacity: 0.4; padding: 12px; font-weight: normal; }
-td { padding: 15px 5px; border-bottom: 1px solid rgba(255,255,255,0.03); text-align: center; }
-
-.ball { 
-    display: inline-block; width: 38px; height: 38px; line-height: 38px; 
-    text-align: center; border-radius: 50%; 
-    background: radial-gradient(circle at 30% 30%, #475569, #1e293b);
-    margin: 4px; font-weight: 800; 
-    font-size: 16px; color: var(--accent);
-    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-}
-
-.strategy-block { 
-    background: var(--glass);
-    padding: 20px; margin: 15px 0; border-radius: 18px;
-    border-left: 4px solid rgba(255,255,255,0.1); transition: 0.4s;
-    cursor: pointer;
-}
-.strategy-block:hover { background: rgba(255,255,255,0.08); transform: scale(1.01); }
-.strategy-block.active { border-left-color: var(--success); }
-
-.logic-detail {
-    display: none;
-    margin-top: 15px;
-    padding: 15px;
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 12px;
-    font-size: 0.85rem;
-    color: #cbd5e1;
-    border: 1px solid rgba(255,255,255,0.05);
-}
-
-.rate-badge { 
-    font-size: 0.7rem; padding: 5px 12px; border-radius: 20px; 
-    background: rgba(56, 189, 248, 0.15); color: var(--accent); 
-    font-weight: bold;
-}
-
-.chart-container { height: 320px; }
-
-.inline-input { 
-    width: 60px; height: 60px; text-align: center; margin: 0 5px; 
-    border: 2px solid rgba(255,255,255,0.1); border-radius: 16px; 
-    font-size: 1.4rem; font-weight: 900; background: #0f172a; color: var(--gold);
-}
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
+.card { background: var(--card-bg); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.08); padding: 24px; border-radius: 24px; box-shadow: 0 20px 40px rgba(0,0,0,0.4); margin-bottom: 25px; }
+.upload-section { border: 2px dashed rgba(56,189,248,0.2); transition:0.3s; padding:40px 20px; }
+.upload-section:hover { border-color: var(--accent); background: rgba(56,189,248,0.05); }
+button { background: linear-gradient(135deg, var(--accent), #0284c7); color:white; border:none; padding:16px 30px; border-radius:14px; font-weight:800; font-size:1.1rem; cursor:pointer; transition:all 0.3s cubic-bezier(0.4,0,0.2,1); box-shadow:0 4px 15px rgba(56,189,248,0.3); width:100%; letter-spacing:1px; }
+button:hover { transform:translateY(-3px); box-shadow:0 8px 25px rgba(56,189,248,0.5); }
+.dashboard-grid { display:grid; grid-template-columns:1fr; gap:20px; }
+@media(min-width:768px){.dashboard-grid{grid-template-columns:1fr 1fr;}}
+h3 { font-size:1.2rem; margin-top:0; margin-bottom:20px; color:var(--gold); display:flex; align-items:center; font-weight:700; }
+h3::before{content:''; display:inline-block; width:4px; height:20px; background:var(--gold); margin-right:12px; border-radius:2px;}
+table{width:100%; border-collapse:collapse;}
+th{text-align:center; font-size:0.75rem; opacity:0.4; padding:12px; font-weight:normal;}
+td{padding:15px 5px; border-bottom:1px solid rgba(255,255,255,0.03); text-align:center;}
+.ball{display:inline-block; width:38px; height:38px; line-height:38px; text-align:center; border-radius:50%; background:radial-gradient(circle at 30% 30%, #475569, #1e293b); margin:4px; font-weight:800; font-size:16px; color:var(--accent); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
+.strategy-block{background:var(--glass); padding:20px; margin:15px 0; border-radius:18px; border-left:4px solid rgba(255,255,255,0.1); transition:0.4s; cursor:pointer;}
+.strategy-block:hover{background:rgba(255,255,255,0.08); transform:scale(1.01);}
+.strategy-block.active{border-left-color:var(--success);}
+.logic-detail{display:none; margin-top:15px; padding:15px; background:rgba(0,0,0,0.3); border-radius:12px; font-size:0.85rem; color:#cbd5e1; border:1px solid rgba(255,255,255,0.05);}
+.chart-container{height:320px;}
+.inline-input{width:60px; height:60px; text-align:center; margin:0 5px; border:2px solid rgba(255,255,255,0.1); border-radius:16px; font-size:1.4rem; font-weight:900; background:#0f172a; color:var(--gold);}
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button{-webkit-appearance:none; margin:0;}
 </style>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-
 <div class="container">
-    <header>
-        <h1>539 QUANT PRO</h1>
-        <p>ADVANCED ANALYTICS • DATA DRIVEN</p>
-    </header>
+<header><h1>539 QUANT PRO</h1><p>ADVANCED ANALYTICS • DATA DRIVEN</p></header>
 
-    <div class="card upload-section">
-        <h3 style="justify-content: center; color: var(--accent);">數據終端入口</h3>
-        <input type="file" id="csvFile" accept=".csv" style="display: none;">
-        <label for="csvFile" id="fileLabel" style="display: block; padding: 15px; background: var(--secondary); border-radius: 10px; cursor: pointer; margin-bottom: 20px; color: #94a3b8;">
-            點擊選取歷史數據 CSV
-        </label>
-        <button onclick="runAll()">啟動量化決策分析</button>
-    </div>
+<div class="card upload-section">
+<h3 style="justify-content:center; color:var(--accent)">數據終端入口</h3>
+<input type="file" id="csvFile" accept=".csv" style="display:none;">
+<label for="csvFile" id="fileLabel" style="display:block; padding:15px; background:var(--secondary); border-radius:10px; cursor:pointer; margin-bottom:20px; color:#94a3b8;">點擊選取歷史數據 CSV</label>
+<button onclick="runAll()">啟動量化決策分析</button>
+</div>
 
-    <div class="dashboard-grid">
-        <div id="history" class="card"><h3>近期開獎歷史</h3></div>
-        <div id="stats_table" class="card"><h3>策略回測表現</h3></div>
-    </div>
+<div class="dashboard-grid">
+<div id="history" class="card"><h3>近期開獎歷史</h3></div>
+<div id="stats_table" class="card"><h3>策略回測表現</h3></div>
+</div>
 
-    <div id="results" class="card">
-        <h3>智能推荐組合 (點擊策略查看邏輯)</h3>
-        <div style="text-align: center; padding: 40px; opacity: 0.3;">等待數據執行...</div>
-    </div>
+<div id="results" class="card"><h3>智能推荐組合 (點擊策略查看邏輯)</h3><div style="text-align:center; padding:40px; opacity:0.3;">等待數據執行...</div></div>
 
-    <div class="card">
-        <h3>自選號碼勝率驗證</h3>
-        <div style="display: flex; justify-content: center; flex-wrap: wrap; margin-bottom: 25px; gap: 10px;">
-            <input type="number" class="inline-input" id="userNum1" placeholder="01" min="1" max="39">
-            <input type="number" class="inline-input" id="userNum2" placeholder="02" min="1" max="39">
-            <input type="number" class="inline-input" id="userNum3" placeholder="03" min="1" max="39">
-            <input type="number" class="inline-input" id="userNum4" placeholder="04" min="1" max="39">
-            <input type="number" class="inline-input" id="userNum5" placeholder="05" min="1" max="39">
-        </div>
-        <button onclick="verifyUserPick()" style="background: transparent; border: 2px solid var(--accent); color: var(--accent);">驗證歷史命中潛力</button>
-        <div id="userPickResult" style="margin-top:25px; padding: 15px; border-radius:
+<div class="card">
+<h3>自選號碼勝率驗證</h3>
+<div style="display:flex; justify-content:center; flex-wrap:wrap; margin-bottom:25px; gap:10px;">
+<input type="number" class="inline-input" id="userNum1" placeholder="01" min="1" max="39">
+<input type="number" class="inline-input" id="userNum2" placeholder="02" min="1" max="39">
+<input type="number" class="inline-input" id="userNum3" placeholder="03" min="1" max="39">
+<input type="number" class="inline-input" id="userNum4" placeholder="04" min="1" max="39">
+<input type="number" class="inline-input" id="userNum5" placeholder="05" min="1" max="39">
+</div>
+<button onclick="verifyUserPick()" style="background:transparent; border:2px solid var(--accent); color:var(--accent);">驗證歷史命中潛力</button>
+<div id="userPickResult" style="margin-top:25px; padding:15px; border-radius:12px; background:rgba(255,255,255,0.02);"></div>
+</div>
+
+<div class="card chart-container"><h3>機率分佈趨勢</h3><canvas id="trendChart"></canvas></div>
+</div>
+
+<script>
+let HIST_DATA = [], CORR_MATRIX = {};
+const RULES = [
+{name:"保守型策略", pool:"last1+5", desc:"核心為「熱號規律」，鎖定上期號碼及鄰近5位數。", logic:"頻率加權60% + 關聯性30% + 擾動10%"},
+{name:"平衡型策略", pool:"last5+5+10", desc:"掃描近5期數據，平衡長短期熱度。", logic:"平均頻率40% + 遺漏修正40% + 隨機20%"},
+{name:"激進型策略", pool:"last5+10", desc:"採用大跨度相關性分析(+10偏移)，捕捉跳號轉折。", logic:"關聯矩陣50% + 跳號預測30% + 隨機20%"}];
+
+// CSV 上傳
+document.getElementById('csvFile').addEventListener('change', e=>{
+document.getElementById('fileLabel').innerText=e.target.files[0]?.name||"點擊選取歷史數據 CSV";
+});
+
+function parseCSV(text){
+const lines=text.trim().split("\n"); lines.shift();
+return lines.map(l=>{ const p=l.split(","); if(p.length<7) return null; return {date:p[0].trim(), nums:p.slice(2,7).map(n=>parseInt(n.trim())).sort((a,b)=>a-b)} }).filter(x=>x!==null).sort((a,b)=>new Date(a.date)-new Date(b.date));
+}
+
+function buildCorrelationMatrix(data){
+CORR_MATRIX={};
+for(let i=0;i<data.length-1;i++){
+const current=data[i].nums, next=data[i+1].nums;
+current.forEach(c=>{if(!CORR_MATRIX[c]) CORR_MATRIX[c]={}; next.forEach(n=>{CORR_MATRIX[c][n]=(CORR_MATRIX[c][n]||0)+1;});});
+}
+}
+
+function showHistory(data){
+let html="<table>";
+data.slice(-5).reverse().forEach(d=>{
+html+=`<tr><td style='opacity:0.6;font-size:0.8rem'>${d.date.slice(5)}</td><td>${d.nums.map(n=>`<span class="ball">${String(n).padStart(2,'0')}</span>`).join("")}</td></tr>`;
+});
+html+="</table>"; document.getElementById("history").innerHTML="<h3>近期開獎歷史</h3>"+html;
+}
+
+function calculateExpectedValue(pick,testData){let hits=0; testData.forEach(d=>{const common=d.nums.filter(n=>pick.includes(n)); if(common.length>=2) hits+=common.length;}); return hits/testData.length;}
+
+function generateSmartPick(prev,rule,simCount=100,randomness=2.5){
+const pool=new Set(); const lastNums=prev[prev.length-1].nums;
+if(rule.pool.includes("last1")) lastNums.forEach(n=>pool.add(n));
+if(rule.pool.includes("last5")) prev.slice(-5).forEach(d=>d.nums.forEach(n=>pool.add(n)));
+[...pool].forEach(n=>{ if(rule.pool.includes("+5") && n+5<=39) pool.add(n+5); if(rule.pool.includes("+10") && n+10<=39) pool.add(n+10); });
+const freq={}; prev.forEach(d=>d.nums.forEach(n=>freq[n]=(freq[n]||0)+1));
+let candidates=[]; for(let i=0;i<simCount;i++){ let arr=[...pool]; arr.sort((a,b)=>(freq[b]||0)-(freq[a]||0)+Math.random()*randomness*2-randomness); candidates.push(arr.slice(0,5).sort((a,b)=>a-b));}
+let best=candidates[0], maxVal=-1; candidates.forEach(p=>{ const val=calculateExpectedValue(p,HIST_DATA.slice(-60)); if(val>maxVal){maxVal=val; best=p;} }); return best;
+}
+
+function doBacktest(data){ return RULES.map(rule=>{ const pick=generateSmartPick(data,rule,50,2); return {strategy:rule.name, pick:pick, hit2Rate:calculateExpectedValue(pick,data), hit3Rate:calculateExpectedValue(pick,data)}; }); }
+
+function renderStatsTable(stats){
+let html="<table><tr><th>策略</th><th>推薦號碼</th><th>命中率%</th></tr>";
+stats.forEach(s=>{ html+=`<tr><td>${s.strategy}</td><td>${s.pick.map(n=>`<span class="ball">${String(n).padStart(2,'0')}</span>`).join("")}</td><td>${(s.hit2Rate*100).toFixed(1)}%</td></tr>`; });
+html+="</table>"; document.getElementById("stats_table").innerHTML="<h3>策略回測表現</h3>"+html;
+}
+
+function renderTopCombinations(data,stats){
+let container=document.getElementById("results"); container.innerHTML="<h3>智能推荐組合 (點擊策略查看邏輯)</h3>";
+stats.forEach((s,i)=>{
+let block=document.createElement("div"); block.className="strategy-block";
+block.innerHTML=`<strong>${s.strategy}</strong> - ${s.pick.map(n=>`<span class="ball">${String(n).padStart(2,'0')}</span>`).join("")}<div class="logic-detail">${RULES[i].desc}<br>${RULES[i].logic}</div>`;
+block.onclick=()=>{ block.classList.toggle("active"); const detail=block.querySelector(".logic-detail"); detail.style.display=detail.style.display==="block"?"none":"block"; };
+container.appendChild(block);
+});
+}
+
+function drawTrendChart(hit2Arr,hit3Arr){
+const ctx=document.getElementById('trendChart').getContext('2d');
+if(window.trendChart) window.trendChart.destroy();
+window.trendChart=new Chart(ctx,{type:'line', data:{labels:hit2Arr.map((_,i)=>i+1), datasets:[{label:'命中率2', data:hit2Arr, borderColor:'#38bdf8', fill:false},{label:'命中率3', data:hit3Arr, borderColor:'#fbbf24', fill:false}]}, options:{responsive:true, plugins:{legend:{labels:{color:'#f1f5f9'}}}, scales:{x:{ticks:{color:'#f1f5f9'}}, y:{ticks:{color:'#f1f5f9'}}}}});
+}
+
+function runAll(){
+const fileInput=document.getElementById("csvFile");
+if(!fileInput.files[0]){ alert("請先選取 CSV 檔案"); return; }
+fileInput.files[0].text().then(text=>{
+HIST_DATA=parseCSV(text);
+if(HIST_DATA.length===0) return;
+buildCorrelationMatrix(HIST_DATA);
+showHistory(HIST_DATA);
+const stats=doBacktest(HIST_DATA);
+renderStatsTable(stats);
+drawTrendChart(stats.map(s=>s.hit2Rate*100), stats.map(s=>s.hit3Rate*100));
+renderTopCombinations(HIST_DATA,stats);
+});
+}
+
+function verifyUserPick(){
+const nums=[]; for(let i=1;i<=5;i++){ const val=parseInt(document.getElementById("userNum"+i).value); if(val>=1&&val<=39) nums.push(val); }
+if(nums.length<5){ alert("請輸入完整5個號碼"); return; }
+const rate=calculateExpectedValue(nums,HIST_DATA); document.getElementById("userPickResult").innerHTML=`歷史潛力命中率：約 ${(rate*100).toFixed(1)}%`;
+}
+</script>
+</body>
+</html>
